--- a/CTS_BusinessProcesses/packages.config
+++ b/CTS_BusinessProcesses/packages.config
@@ -5,4 +5,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="NLog" version="4.5.11" targetFramework="net461" />
+  <package id="NLog.Config" version="4.5.11" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.5.11" targetFramework="net461" />
 </packages>
