--- a/DBSyncServiceTest/ServiceTestConsole.csproj
+++ b/DBSyncServiceTest/ServiceTestConsole.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{832E33A9-B130-48E4-83AB-E69BE1D03830}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DBSyncServiceTest</RootNamespace>
-    <AssemblyName>DBSyncServiceTest</AssemblyName>
+    <RootNamespace>ServiceTestConsole</RootNamespace>
+    <AssemblyName>ServiceTestConsole</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
