--- a/CTS_Analytics/CTS_Analytics.csproj
+++ b/CTS_Analytics/CTS_Analytics.csproj
@@ -53,10 +53,6 @@
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
-    <Reference Include="ArchestrA.MXAccess">
-      <HintPath>..\..\WW-MXAccessToolkit-2014\Global Assembly Cache\ArchestrA.MXAccess.dll</HintPath>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -212,6 +208,7 @@
     <Compile Include="Controllers\MnemonicController.Index.cs" />
     <Compile Include="Controllers\MnemonicController.Doc.cs" />
     <Compile Include="Controllers\StaticController.cs" />
+    <Compile Include="Factories\MnemonicModelFactory.cs" />
     <Compile Include="Filters\CultureAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -384,6 +381,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ResourceFilters.resx</DependentUpon>
     </Compile>
+    <Compile Include="Services\CentralDBService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -973,6 +971,10 @@
     <ProjectReference Include="..\CTS_Models\CTS_Models.csproj">
       <Project>{e7ec19a1-45e2-41eb-97c3-c6e3eb822fe9}</Project>
       <Name>CTS_Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DataEmulator\DataEmulator.csproj">
+      <Project>{182AA793-1533-4943-B484-2CED2E4C9E1D}</Project>
+      <Name>DataEmulator</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
