--- a/CTS_Analytics/CTS_Analytics.csproj
+++ b/CTS_Analytics/CTS_Analytics.csproj
@@ -198,11 +198,11 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CtsController.cs" />
     <Compile Include="Controllers\DashBoardController.cs" />
     <Compile Include="Controllers\DynamicController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\FilterController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MnemonicController.cs" />
     <Compile Include="Controllers\MnemonicController.Stations.cs" />
     <Compile Include="Controllers\MnemonicController.Index.cs" />
@@ -958,6 +958,7 @@
     <Content Include="Views\Mnemonic\Doc-detail\doc_detail_Wagon_search.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Views\Cts\" />
     <Folder Include="Views\Grafana\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
